# lilith-astro

./: .gitignore  package-lock.json  pyproject.toml  start.bat
doc/: 01_architecture_overview.md  02_implementation_guide.md  03_api_specification.md  prd_aplicatie_horoscop_personalizat_premium.md  user_manual_functional_overview.md
frontend/: babel.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.tsx  api.ts  index.tsx  styles.scss
frontend/src/components/: InputForm.tsx  MapPicker.tsx  OutputDisplay.tsx
frontend/src/types/: AstrologicalChart.ts  HoroscopeNarrative.ts  ProcessingSteps.ts
frontend/src/utils/: geocoding.ts
src/astro_persona.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/config/: settings.py
src/core/domain/: exceptions.py  prompts.py  rules.py
src/core/use_cases/: calculate_chart.py  generate_horoscope.py
src/infrastructure/ai/: gemini_adapter.py
src/infrastructure/astro_engine/: swiss_ephemeris.py
src/interfaces/api/: main.py  v1.py
src/tests/: test_ai.py  test_api.py  test_astro_engine.py
static/: index.html
