[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-persona"
version = "0.2.3"
description = "AstroPersona project"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pyswisseph>=2.10.3",
    "pydantic",
    "pydantic-settings",
    "google-genai",
    "sqlalchemy",
    "alembic",
    "pytest",
    "httpx",
    "python-dotenv",
    "ruff"
]